tests/ui/parser/macro/trait-object-macro-matcher.stderr
error: lifetime in trait object type must be followed by `+`
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^

error: lifetime in trait object type must be followed by `+`
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0224`.
